# YggdrasilWM

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  ConfigDataBindingsTest.json  README.md  UMLDiagram.md  all  annotated.html  annotated_dup.js  classes.html  config-template.pkl  config.json  dir_000000_000001.html  dir_000000_000003.html  dir_000000_000004.html  dir_000003_000002.html  dir_000007_000000.html  dir_000008_000000.html  dir_000009_000000.html  dir_000010_000000.html  dir_000011_000000.html  dir_1c936d38b17adddee761eff7016a2695.html  dir_1c936d38b17adddee761eff7016a2695.js  dir_1c936d38b17adddee761eff7016a2695_dep.map  dir_1c936d38b17adddee761eff7016a2695_dep.md5  dir_3540fbd1e5a2363e4c814d1dac108195.html  dir_3540fbd1e5a2363e4c814d1dac108195.js  dir_4475ee5b06e71bf9ab49551400cf8f65.html  dir_4475ee5b06e71bf9ab49551400cf8f65.js  dir_4475ee5b06e71bf9ab49551400cf8f65_dep.map  dir_4475ee5b06e71bf9ab49551400cf8f65_dep.md5  dir_55be27304aee4fac13a1eb8fc08f58b6.html  dir_55be27304aee4fac13a1eb8fc08f58b6.js  dir_55be27304aee4fac13a1eb8fc08f58b6_dep.map  dir_55be27304aee4fac13a1eb8fc08f58b6_dep.md5  dir_64efee6ba3c2d0e1c539bc2ff0ae7430.html  dir_64efee6ba3c2d0e1c539bc2ff0ae7430.js  dir_64efee6ba3c2d0e1c539bc2ff0ae7430_dep.map  dir_64efee6ba3c2d0e1c539bc2ff0ae7430_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  (+145 more)
.github/workflows/: doxygen.yml
d0/d2d/: YggdrasilExceptions_8hpp__incl.map  YggdrasilExceptions_8hpp__incl.md5
d0/d2f/: ConfigDataGroups_8hpp.html  ConfigDataGroups_8hpp_source.html
d0/d38/: classWindowManager__coll__graph.map  classWindowManager__coll__graph.md5
d0/d5f/: classConfigDataBindings__inherit__graph.map  classConfigDataBindings__inherit__graph.md5
d0/d6a/: ConfigDataBindings_8hpp__dep__incl.map  ConfigDataBindings_8hpp__dep__incl.md5
d0/d7b/: Widget_8hpp.html  Widget_8hpp_source.html
d0/d9e/: classBars-members.html
d0/da0/: ConfigDataGroup_8hpp.html  ConfigDataGroup_8hpp_source.html
d0/db5/: CommandBase_8hpp.html  CommandBase_8hpp_source.html
d0/db6/: LayoutManager_8hpp.html  LayoutManager_8hpp_source.html
d0/db7/: classGroup.html  classGroup.js  classGroup_a28618286b36322caaccd549ca78a8b67_cgraph.map  classGroup_a28618286b36322caaccd549ca78a8b67_cgraph.md5  classGroup_a2f500e6e85ef9b563027a57d213c43c2_cgraph.map  classGroup_a2f500e6e85ef9b563027a57d213c43c2_cgraph.md5  classGroup_a41a0c615701367cf4da30217eeed8a57_cgraph.map  classGroup_a41a0c615701367cf4da30217eeed8a57_cgraph.md5  classGroup_a6e524154dbd247a028ed51f542c5452e_icgraph.map  classGroup_a6e524154dbd247a028ed51f542c5452e_icgraph.md5  classGroup_a94d256522889517fbb29c121aa610d2d_icgraph.map  classGroup_a94d256522889517fbb29c121aa610d2d_icgraph.md5  classGroup_ac028fe6f7ee46394a5dd6f0393aad04e_cgraph.map  classGroup_ac028fe6f7ee46394a5dd6f0393aad04e_cgraph.md5  classGroup_ac2e933bb2c5dda36db7437a8a35a2472_cgraph.map  classGroup_ac2e933bb2c5dda36db7437a8a35a2472_cgraph.md5  classGroup_aeea3e926ee9c140025a8b25f737ee51f_cgraph.map  classGroup_aeea3e926ee9c140025a8b25f737ee51f_cgraph.md5
d0/dbd/: ConfigHandler_8hpp__dep__incl.map  ConfigHandler_8hpp__dep__incl.md5  classMasterLayoutManager.html  classMasterLayoutManager.js
d0/dc4/: ConfigDataWidget_8hpp__incl.map  ConfigDataWidget_8hpp__incl.md5
d0/de5/: ConfigDataWidget_8hpp__dep__incl.map  ConfigDataWidget_8hpp__dep__incl.md5
d1/d11/: Bar_8cpp__incl.map  Bar_8cpp__incl.md5
d1/d18/: classTSBarsData-members.html
d1/d29/: classCommandBase__coll__graph.map  classCommandBase__coll__graph.md5
d1/d37/: ConfigDataWidget_8cpp__incl.map  ConfigDataWidget_8cpp__incl.md5  classClient.html  classClient.js  classClient_a1b0d58c212ba4aeccdd7b11fa3e6bed2_icgraph.map  classClient_a1b0d58c212ba4aeccdd7b11fa3e6bed2_icgraph.md5  classClient_a3a8287ddf4cdbba7e6452d1e65346338_icgraph.map  classClient_a3a8287ddf4cdbba7e6452d1e65346338_icgraph.md5  classClient_a4e06ae9eb6a17eec3873010e805ba472_cgraph.map  classClient_a4e06ae9eb6a17eec3873010e805ba472_cgraph.md5  classClient_a57d5c8d462c6a11f5bd305ad23ff4014_cgraph.map  classClient_a57d5c8d462c6a11f5bd305ad23ff4014_cgraph.md5  classClient_a7787490fde404953f58eb1d002b08def_cgraph.map  classClient_a7787490fde404953f58eb1d002b08def_cgraph.md5  classClient_a840e519ca781888cbd54181572ebe3a7_cgraph.map  classClient_a840e519ca781888cbd54181572ebe3a7_cgraph.md5  classClient_a9b683356e12c2feac574f751ddbec0d2_icgraph.map  classClient_a9b683356e12c2feac574f751ddbec0d2_icgraph.md5  classClient_a9b7919729625c8637ca982a9f4af725f_cgraph.map  classClient_a9b7919729625c8637ca982a9f4af725f_cgraph.md5  classClient_a9b7919729625c8637ca982a9f4af725f_icgraph.map  classClient_a9b7919729625c8637ca982a9f4af725f_icgraph.md5  (+8 more)
d1/d6f/: Group_8hpp.html  (+2 more)
inc/: Client.hpp  ConfigDataBase.hpp  ConfigFileHandler.hpp  ConfigHandler.hpp  EventHandler.hpp  Ewmh.hpp  Group.hpp  LayoutManager.hpp  Logger.h  Logger.hpp  TreeLayoutManager.hpp  WindowManager.hpp  YggdrasilExceptions.hpp  util.hpp  window_manager.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  enums_0.js  (+65 more)
src/: Client.cpp  ConfigDataBase.cpp  ConfigFileHandler.cpp  ConfigHandler.cpp  EventHandler.cpp  Ewmh.cpp  Group.cpp  LayoutManager.cpp  Logger.cpp  TreeLayoutManager.cpp  WindowManager.cpp  main.cpp  util.cpp  window_manager.cpp
test/: BindingTest.cpp  ClientTest.cpp  ConfigDataBarTest.cpp  ConfigDataBarsTest.cpp  ConfigDataBindingsTest.cpp  ConfigDataGroupTest.cpp  ConfigDataGroupsTest.cpp  ConfigFileHandlerTest.cpp  EventHandlerTest.cpp  FocusGroupTest.cpp  GroupTest.cpp  LoggerTest.cpp  SpawnTest.cpp  TreeLayoutManagerTest.cpp  WindowManagerTest.cpp
util_scripts/: KeySyms.md  keysymtostring.py  listwin.sh  update_date.sh
(+1476 files in other folders)
